<resources>
    <string name="apps_name">고씽사장님</string>
    <string name="kakao_app_key">759f7b834de9aaccbff77bfa09f7f76f</string>
    <string name="common_toast_payment_password_not_create">결제 비밀번호 생성을 실패했습니다.</string>
    <string name="common_toast_create_payment_password">결제 비밀번호를 생성해 주세요.</string>
    <string name="common_toast_msg_finish">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="common_toast_network_fail">다시 시도해 주세요.</string>
    <string name="common_toast_ready">준비중입니다.</string>
    <string name="common_go_sing_admin_logo">고씽 관리자 로고</string>
    <string name="sign_up_title">회원가입</string>
    <string name="common_date_format">Y.M.D</string>
    <string name="common_not_exist_session">다시 로그인해 주세요</string>
    <string name="common_price_won">%s원</string>
    <string name="dialog_no_title_done">확인</string>
    <string name="dialog_no_title_no">아니요</string>
    <string name="dialog_no_title_yes">예</string>
    <string name="common_title_bar_back_description">뒤로가기 버튼</string>
    <string name="activity_intro_login">로그인</string>
    <string name="activity_intro_sign_up">GOSING 회원가입</string>
    <string name="activity_intro_auto_login_fail">자동로그인을 실패 했습니다.</string>
    <string name="activity_intro_force_update">최신버전으로 업데이트를 \n진행하여 주세요.</string>
    <string name="activity_intro_select_update">최신버전이 있습니다. \n업데이트를 진행하시겠습니까?</string>
    <string name="activity_create_pin_title">결제 비밀번호 생성</string>
    <string name="activity_go_sing_admin_confirm_permission_header">
        GOSING 앱을 이용하기 위해서는\n다음 권한을 허용해 주셔야 합니다.</string>
    <string name="activity_go_sing_admin_confirm_permission_gps">위치 (선택)</string>
    <string name="activity_go_sing_admin_confirm_permission_gps_reason">
        현재 위치 자동 수신</string>
    <string name="activity_go_sing_admin_confirm_permission_camera">카메라 (선택)</string>
    <string name="activity_go_sing_admin_confirm_permission_camera_reason">
        업소 사진 촬영 및 등록</string>
    <string name="activity_go_sing_admin_confirm_permission_storage">저장공간 (선택)</string>
    <string name="activity_go_sing_admin_confirm_permission_storage_reason">
        업소 사진 등록</string>
    <string name="activity_go_sing_admin_confirm_permission_reason">
        선택적 접근권한은 해당 기능을 사용할 때 허용이 필요하며\n비 허용 시에도 해당 기능 외 서비스 이용이 가능합니다.</string>
    <string name="activity_go_sing_admin_confirm_permission_done">확인</string>
    <string name="fragment_sign_up_terms_of_agreement_title">가입 약관동의</string>
    <string name="fragment_sign_up_terms_of_agreement_all_check">전체 동의</string>
    <string name="fragment_sign_up_terms_of_agreement_read_all">전문보기</string>
    <string name="fragment_sign_up_terms_of_agreement_use_agreement">이용약관 동의 (필수)</string>
    <string name="fragment_sign_up_terms_of_agreement_banking_agreement">
        전자금융거래 이용약관 (필수)</string>
    <string name="fragment_sign_up_terms_of_agreement_personal_info_agreement">
        개인정보 수집 및 이용동의 (필수)</string>
    <string name="fragment_sign_up_terms_of_agreement_third_party_agreement">
        개인정보 제3자 제공동의 (필수)</string>
    <string name="fragment_sign_up_terms_of_agreement_age_agreement">
        만 14세 이상 회원입니다. (필수)</string>
    <string name="fragment_sign_up_terms_of_agreement_event_agreement">
        GOSING 혜택 알림 동의 (선택) </string>
    <string name="fragment_sign_up_terms_of_agreement_next_step">다음</string>
    <string name="fragment_sign_up_terms_of_agreement_event_check">
        \nGOSING 혜택 알림 수신에 동의하셨습니다.
    </string>
    <string name="fragment_sign_up_terms_of_agreement_event_uncheck">
        \nGOSING 혜택 알림 수신에 동의하지 않으셨습니다.
    </string>
    <string name="fragment_create_account_email">이메일 아이디</string>
    <string name="fragment_create_account_input_email_hint">이메일을 입력하세요.</string>
    <string name="fragment_create_account_input_email_check">중복확인</string>
    <string name="fragment_create_account_input_email_err">이메일 형식을 다시 확인해 주세요.</string>
    <string name="fragment_create_account_pw">로그인 비밀번호</string>
    <string name="fragment_create_account_input_pw_hint">
        영문/숫자/특수문자 8~20자로 입력해 주세요.</string>
    <string name="fragment_create_account_input_pw_err">
        영문/숫자/특수문자 8자~20자로 입력해 주세요.</string>
    <string name="fragment_create_account_pw_check">로그인 비밀번호 확인</string>
    <string name="fragment_create_account_input_pw_check_hint">
        비밀번호를 한 번 더 입력해주세요.</string>
    <string name="fragment_create_account_input_pw_check_err">
        입력한 비밀번호가 서로 일치하지 않습니다.</string>
    <string name="fragment_create_account_exist_email">
        이미 존재하는 이메일 아이디입니다.다른 이메일 주소를 입력해 주세요.</string>
    <string name="fragment_create_account_next_step">다음</string>
    <string name="fragment_password_input_new_password_title">결제 비밀번호 등록</string>
    <string name="fragment_password_input_new_password_explanation">
        GOSING 포인트 충전과 결제 시\n사용되는 비밀번호를 등록해 주세요.
    </string>
    <string name="fragment_password_input_again_payment_password">
        결제 비밀번호를 한 번 더 입력해 주세요.
    </string>
    <string name="fragment_sign_up_complete_welcome">
        GOSING 회원이 되신것을\n환영합니다!
    </string>
    <string name="fragment_sign_up_complete_input_code_title">영업자 코드를 입력하세요. (선택)</string>
    <string name="fragment_sign_up_completed_input_code_hint">영업자 코드 입력</string>
    <string name="fragment_sign_up_completed_input_code_check">확인</string>
    <string name="fragment_sign_up_completed_input_code_err">
        영업자 코드에 해당하는 회원이 존재하지 않습니다.</string>
    <string name="fragment_sign_up_completed_register_store">업소 등록하기</string>
    <string name="fragment_sign_up_completed_title">회원가입 완료</string>
    <string name="activity_login_gosing_text_description">고씽 텍스트</string>
    <string name="activity_login_input_email">이메일 아이디 입력</string>
    <string name="activity_login_input_pw">로그인 비밀번호 입력</string>
    <string name="activity_login_forget_login_info">로그인 정보를 잊으셨나요?</string>
    <string name="activity_login_btn_login">로그인</string>
    <string name="activity_login_find_id">아이디 찾기</string>
    <string name="activity_login_change_pw">비밀번호 변경</string>
    <string name="activity_login_err">
        아이디나 비밀번호가 일치하지 않습니다.\n확인 후 다시 입력해 주세요.</string>
    <string name="fragment_main_title">GOSING</string>
    <string name="fragment_main_point_balance">GOSING포인트 잔액</string>
    <string name="fragment_main_charge_point">충전</string>
    <string name="fragment_main_withdrawal_point">출금</string>
    <string name="fragment_main_side_menu_description">사이드 메뉴 아이콘</string>
    <string name="fragment_main_notify_description">알림 아이콘</string>
    <string name="fragment_main_store_management">업소관리</string>
    <string name="fragment_main_store_management_description">업소 관리 아이콘</string>
    <string name="fragment_main_review_management">리뷰관리</string>
    <string name="fragment_main_review_management_description">리뷰 관리 아이콘</string>
    <string name="fragment_main_point_history">포인트 내역</string>
    <string name="fragment_main_point_history_description">포인트 내역 아이콘</string>
    <string name="fragment_main_ad_management">광고관리</string>
    <string name="fragment_main_ad_management_description">광고관리 아이콘</string>
    <string name="fragment_main_food_order">먹거리주문</string>
    <string name="fragment_main_food_order_description">먹거리주문 아이콘</string>
    <string name="fragment_main_non_member_save">비회원 적립</string>
    <string name="fragment_main_non_member_save_description">비회원 적립 아이콘</string>
    <string name="fragment_main_notice_title">공지사항</string>
    <string name="fragment_main_ceo_info">(주)모아플래닛 사업자 정보</string>
    <string name="fragment_main_ceo_name">대표이사 : 임승옥</string>
    <string name="fragment_main_numbers">
        사업자등록번호 : 000&#8211;00&#8211;00000 | 통신판매업신고 : XX00000호</string>
    <string name="fragment_main_address">본사 : 서울시 금천구 가산디지털1로 168</string>
    <string name="fragment_main_email">고객센터 : surpport@moaplanet.co.kr</string>
    <string name="fragment_main_copyright">Copyright MOA. All Rights Reserved.</string>
    <string name="fragment_main_make_code">결제 코드 생성</string>
    <string name="fragment_main_not_responsible">
        (주)모아플래닛은 통신판매중개자로서 거래 당사자가 아니며 상품 거래 정보 및
        거래에 대하여 책임을 지지 않습니다.</string>
    <string name="fragment_main_default_point">%s원</string>
    <string name="fragment_main_expected_active_point">활성 예정 포인트 : %s원</string>
    <string name="fragment_main_no_deposit_account">"출금 계좌가 등록되어 있지 않습니다. 출금 계좌를 등록 하시겠습니까?"</string>
    <string name="activity_point_history_point_balance">GOSING포인트 잔액</string>
    <string name="activity_point_history_active_schedule_point">활성 예정 포인트</string>
    <string name="activity_point_history_remove_schedule_point">당월 소멸 예정 포인트</string>
    <string name="item_point_history_plus_point">+ %s 원</string>
    <string name="item_point_history_minus_point">- %s 원</string>
    <string name="dialog_point_history_validity">%s-%s</string>
    <string name="activity_notification_title">알림</string>
    <string name="fragment_ad_select_title">광고관리</string>
    <string name="fragment_ad_select_paymentable_amount">결제 가능한 GOSING포인트</string>
    <string name="fragment_ad_select_charge_point">충전하기</string>
    <string name="fragment_ad_sub_title">
        GOSING포인트로\nGOSING PLUS 광고 상품을 구입하세요!</string>
    <string name="activity_ad_select_ad_explanation">
        GOSING PLUS 적용 시 사장님의 업소가 고객 APP상단에
        \n노출되어 더 많은 고객에게 업소를 홍보할 수 있습니다.</string>
    <string name="fragment_ad_select_product_description">광고 상품 이미지</string>
    <string name="fragment_ad_select_thirty_day_product">GOSING PLUS (30일)</string>
    <string name="fragment_ad_select_fifteen_day_product">GOSING PLUS (15일)</string>
    <string name="fragment_ad_select_not_use_ad">현재 적용 중인 광고 상품이 없습니다.</string>
    <string name="fragment_ad_select_use_product">현재 적용 중인 광고 상품</string>
    <string name="fragment_ad_select_use_product_info">
        - GOSING PLUS / 광고 만료일 : 2019년 10월 9일 17시 30분</string>
    <string name="fragment_ad_payment_product_thumbnail_description">상품 이미지</string>
    <string name="fragment_ad_payment_product_expiry_date">구입 후 광고 상품 만료일</string>
    <string name="fragment_ad_payment_product">구입할 상품</string>
    <string name="fragment_ad_payment_agree">광고 상품 구입 안내를 읽고 동의합니다.</string>
    <string name="fragment_ad_payment_agree_read_all">전문보기</string>
    <string name="fragment_ad_payment_product_payment">결제하기</string>
    <string name="fragment_ad_input_pw_title">결제하기</string>
    <string name="fragment_ad_input_pw_use_input_pw">사용 중인 결제 비밀번호 입력</string>
    <string name="fragment_ad_input_pw_find_pw">결제 비밀번호 찾기</string>
    <string name="fragment_ad_input_pw_payment_success">GOSING PLUS 광고상품을 구입하였습니다.</string>
    <string name="header_slide_menu_profile_description">프로필 이미지</string>
    <string name="header_slide_menu_point_title">GOSING포인트</string>
    <string name="fragment_non_member_save_title_bar">비회원 적립</string>
    <string name="fragment_payment_money_title">결제금액</string>
    <string name="fragment_payment_money_won">%s원</string>
    <string name="fragment_qr_payment_title">결제 QR 코드</string>
    <string name="fragment_qr_payment_qr_code_dialog">
        결제QR코드가 만료되었습니다.
        \n결제QR코드를 재생성 하시겠습니까?
    </string>
    <string name="fragment_qr_payment_qr_code_payment_dialog">결제가 완료되었습니다.</string>
    <string name="common_hint_text">0원</string>
    <string name="payment_amount_qr">결제금액</string>
    <string name="customer_reserve_fund">고객 적립금</string>
    <string name="gosing_plus_15day_price">0원</string>
    <string name="delivery_amount_content">0 원</string>
    <string name="common_qr_left_above_description">QR코드 왼쪽 위</string>
    <string name="common_qr_right_above_description">QR코드 오른쪽 위</string>
    <string name="common_qr_left_under_description">QR코드 왼쪽 아래</string>
    <string name="common_qr_right_under_description">QR코드 오른쪽 아래</string>
    <string name="common_qr_code">QR코드</string>
    <string name="qr_code_show_notice">생성된 코드를 고객에게 보여주세요.</string>
    <string name="qr_code_input_timer">03 : 15</string>
    <string name="karaoke_name">신풍 노래방 가산점</string>
    <string name="total_payment_amount">총 결제 금액</string>
</resources>