<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <com.moaplanet.gosingadmin.common.view.CommonTitleBar
        android:id="@+id/common_inputqr_title_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_qr_payment_title" />

    <RelativeLayout
        android:id="@+id/common_main_qr_code_box"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/common_inputqr_title_bar">

        <ImageView
            android:id="@+id/iv_main_qr_left_above"
            android:layout_width="27.3dp"
            android:layout_height="27.3dp"
            android:contentDescription="@string/common_qr_left_above_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_qr_left_above" />

        <ImageView
            android:layout_width="27.3dp"
            android:layout_height="27.3dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/common_qr_right_above_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_qr_right_above" />

        <ImageView
            android:layout_width="27.3dp"
            android:layout_height="27.3dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/common_qr_left_under_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_qr_left_under" />

        <ImageView
            android:layout_width="27.3dp"
            android:layout_height="27.3dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/common_qr_right_under_description"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_qr_right_under" />

        <ImageView
            android:id="@+id/iv_fragment_qr_payment_qr_code"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:background="@color/color_000000"
            android:contentDescription="@string/common_qr_code"
            android:scaleType="fitXY" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_main_qr_code_show_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font_gd_15"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="5dp"
        android:text="@string/qr_code_show_notice"
        android:textColor="@color/color_000000"
        android:textSize="14dp"
        app:layout_constraintEnd_toStartOf="@id/common_main_qr_code_input_timer"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/common_main_qr_code_box"
        tools:ignore="SpUsage" />

    <RelativeLayout
        android:id="@+id/common_main_qr_code_input_timer"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@drawable/border_rect_15_15_15_15_e9e9e9_ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_main_qr_code_show_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/tv_main_qr_code_show_notice"
        app:layout_constraintTop_toTopOf="@id/tv_main_qr_code_show_notice">

        <TextView
            android:id="@+id/show_five_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/font_gd_15"
            android:gravity="center_horizontal"
            android:text="@string/qr_code_input_timer"
            android:textColor="@color/color_4300ff"
            android:textSize="12dp"
            tools:ignore="SpUsage" />
    </RelativeLayout>

    <View
        android:id="@+id/v_main_bottom_line"
        android:layout_width="0dp"
        android:layout_height="6.7dp"
        android:layout_marginTop="50dp"
        android:background="@color/color_f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_qr_code_show_notice" />

    <TextView
        android:id="@+id/tv_main_karaoke_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/font_gd_15"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="6.7dp"
        android:text="@string/karaoke_name"
        android:textColor="@color/color_000000"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_main_bottom_line"
        tools:ignore="SpUsage" />

    <View
        android:id="@+id/tv_main_karaoke_name_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_karaoke_name" />

    <TextView
        android:id="@+id/tv_main_total_payment_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21.3dp"
        android:fontFamily="@font/font_gd_13"
        android:lineSpacingExtra="5dp"
        android:text="@string/total_payment_amount"
        android:textColor="@color/color_000000"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/tv_main_karaoke_name_line"
        app:layout_constraintTop_toBottomOf="@id/tv_main_karaoke_name_line"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_main_total_payment_amount_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_gd_17"
        android:gravity="end"
        android:lineSpacingExtra="7.3dp"
        android:text="@string/gosing_plus_15day_price"
        android:textColor="@color/color_4300ff"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_main_total_payment_amount"
        app:layout_constraintEnd_toEndOf="@id/tv_main_karaoke_name_line"
        app:layout_constraintTop_toTopOf="@id/tv_main_total_payment_amount"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_main_customer_reserve_fund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/font_gd_13"
        android:lineSpacingExtra="5dp"
        android:text="@string/customer_reserve_fund"
        android:textColor="@color/color_000000"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@id/tv_main_total_payment_amount"
        app:layout_constraintTop_toBottomOf="@id/tv_main_total_payment_amount"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_main_customer_reserve_fund_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_gd_17"
        android:gravity="end"
        android:lineSpacingExtra="5dp"
        android:text="@string/delivery_amount_content"
        android:textColor="@color/color_000000"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_main_customer_reserve_fund"
        app:layout_constraintEnd_toEndOf="@id/tv_main_total_payment_amount_price"
        app:layout_constraintTop_toTopOf="@id/tv_main_customer_reserve_fund"
        tools:ignore="SpUsage" />

    <ProgressBar
        android:id="@+id/pr_fragment_qr_payment_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
