<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff">

    <com.moaplanet.gosingadmin.common.view.CommonTitleBar
        android:id="@+id/common_sign_up_complete_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/fragment_sign_up_completed_title" />

    <TextView
        android:id="@+id/tv_sign_up_complete_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/font_gd_17"
        android:lineSpacingExtra="7.3dp"
        android:text="@string/fragment_sign_up_complete_welcome"
        android:textAlignment="center"
        android:textColor="@color/color_000000"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/common_sign_up_complete_title_bar"
        tools:ignore="SpUsage" />

    <View
        android:id="@+id/view_sign_up_complete_underline"
        android:layout_width="0dp"
        android:layout_height="@dimen/under_line_height"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/color_f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_complete_welcome" />

    <TextView
        android:id="@+id/tv_sign_up_completed_input_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/font_gd_14"
        android:text="@string/fragment_sign_up_complete_input_code_title"
        android:textColor="@color/color_000000"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_sign_up_complete_underline"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/et_sign_up_completed_input_code"
        style="@style/DefaultEditText"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="9dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/fragment_sign_up_completed_input_code_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLength="6"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/btn_sign_up_completed_code_check"
        app:layout_constraintStart_toStartOf="@id/tv_sign_up_completed_input_code_title"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_completed_input_code_title"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btn_sign_up_completed_code_check"
        style="@style/DefaultButton"
        android:layout_width="74dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:text="@string/fragment_sign_up_completed_input_code_check"
        app:layout_constraintBottom_toBottomOf="@id/et_sign_up_completed_input_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_sign_up_completed_input_code" />

    <TextView
        android:id="@+id/tv_sign_up_recommender_err_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/font_gd_13"
        android:text="@string/fragment_sign_up_completed_input_code_err"
        android:textColor="@color/color_ff4a24"
        android:textSize="10dp"
        app:layout_constraintStart_toStartOf="@id/et_sign_up_completed_input_code"
        app:layout_constraintTop_toBottomOf="@id/et_sign_up_completed_input_code"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btn_sign_up_completed_done"
        style="@style/CommonGradientButton"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/common_gradient_button_width_shadow_left_right_space"
        android:layout_marginEnd="@dimen/common_gradient_button_width_shadow_left_right_space"
        android:text="@string/fragment_sign_up_completed_register_store"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>